Bug 1405813 - Move prev-in-flow's EOC list to this container frame's OC list in NormalizeChildLists(). r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D78848